--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>META_INSYT Database</title>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
+
 <style>
 
-/* ===== BODY STYLE ===== */
 body{
     margin:0;
     height:100vh;
     display:flex;
     justify-content:center;
     align-items:center;
-    font-family: 'Segoe UI', sans-serif;
+    font-family:'Segoe UI',sans-serif;
     background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
     color:white;
 }
 
-/* ===== MAIN CONTAINER ===== */
 .container{
-    width:900px;
+    width:1000px;
     display:grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr;
     gap:25px;
 }
 
-/* ===== CARD STYLE ===== */
 .card{
     background: rgba(255,255,255,0.08);
     backdrop-filter: blur(12px);
@@ -35,38 +34,27 @@ body{
     padding:30px;
     box-shadow:0 10px 30px rgba(0,0,0,0.4);
     animation:fadeUp 0.7s ease;
-    transition:0.3s;
 }
 
-.card:hover{
-    transform: translateY(-5px);
-}
-
-/* ===== TITLE ===== */
 h1{
     position:absolute;
     top:30px;
     text-align:center;
     width:100%;
-    font-size:28px;
 }
 
 h2{
     text-align:center;
-    margin-bottom:20px;
 }
 
-/* ===== INPUT ===== */
-input,select{
+input{
     width:100%;
     padding:12px;
     border-radius:8px;
     border:none;
     margin-top:10px;
-    font-size:15px;
 }
 
-/* ===== BUTTON ===== */
 button{
     margin-top:15px;
     width:100%;
@@ -75,26 +63,12 @@ button{
     border-radius:8px;
     background:linear-gradient(45deg,#00c6ff,#0072ff);
     color:white;
-    font-size:16px;
     cursor:pointer;
-    transition:0.3s;
 }
 
-button:hover{
-    transform:scale(1.05);
-    box-shadow:0 5px 15px rgba(0,0,0,0.5);
-}
-
-/* ===== ANIMATION ===== */
 @keyframes fadeUp{
-    from{
-        opacity:0;
-        transform:translateY(20px);
-    }
-    to{
-        opacity:1;
-        transform:translateY(0px);
-    }
+    from{opacity:0;transform:translateY(20px);}
+    to{opacity:1;transform:translateY(0);}
 }
 
 </style>
@@ -102,43 +76,121 @@ button:hover{
 
 <body>
 
-<h1>🚀 META_INSYT Database Management System <br>
-<small>Upload & Download Verified Emails</small>
-</h1>
+<h1>🚀 META_INSYT Database Management System</h1>
 
 <div class="container">
 
-    <!-- ================= UPLOAD SECTION ================= -->
-    <div class="card">
-        <h2>📤 Upload Verified Emails</h2>
+<!-- ================= UPLOAD SECTION ================= -->
+<div class="card">
+<h2>📤 Upload Verified Emails</h2>
 
-        <form action="/upload" method="post" enctype="multipart/form-data">
-            <label>Select CSV File</label>
-            <input type="file" name="emailList" accept=".csv" required>
-            <button type="submit">Upload CSV</button>
-        </form>
-    </div>
+<form id="uploadForm">
+<input type="file" name="emailList" accept=".csv" required>
+<button type="submit">Upload CSV</button>
+</form>
+</div>
 
-    <!-- ================= DOWNLOAD SECTION ================= -->
-    <div class="card">
-        <h2>📥 Download Emails</h2>
 
-        <!-- FULL DOWNLOAD -->
-        <form action="/download-all" method="get">
-            <button type="submit">⬇ Full Database Download</button>
-        </form>
+<!-- ================= DOWNLOAD SECTION ================= -->
+<div class="card">
+<h2>📥 Download Emails</h2>
 
-        <hr style="margin:20px 0;opacity:0.3">
+<form action="/download-all" method="get">
+<button type="submit">⬇ Full Database Download</button>
+</form>
 
-        <!-- DOMAIN DOWNLOAD -->
-        <form action="/download-domain" method="get">
-            <label>Download By Domain</label>
-            <input type="text" name="domain" placeholder="example.com" required>
-            <button type="submit">⬇ Download Domain Emails</button>
-        </form>
-    </div>
+<hr style="margin:20px 0;opacity:0.3">
+
+<form action="/download-domain" method="get">
+<input type="text" name="domain" placeholder="example.com" required>
+<button type="submit">⬇ Download Domain Emails</button>
+</form>
+</div>
+
+
+<!-- ================= REMOVE INVALID CSV ================= -->
+<div class="card">
+<h2>🧹 Remove Emails via CSV</h2>
+
+<form id="removeForm">
+<input type="file" name="emailList" accept=".csv" required>
+<button type="submit">Remove Emails From DB</button>
+</form>
+</div>
 
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+<script>
+
+// =======================
+// UPLOAD CSV
+// =======================
+document.getElementById("uploadForm").addEventListener("submit", async function(e){
+
+    e.preventDefault();
+
+    const formData = new FormData(this);
+
+    try{
+
+        const res = await fetch("/upload",{method:"POST",body:formData});
+        const data = await res.json();
+
+        Toastify({
+            text:`✅ Created: ${data.created} | ⚠️ Duplicates: ${data.duplicates}`,
+            duration:4000,
+            gravity:"top",
+            position:"right",
+            style:{background:"linear-gradient(to right,#00b09b,#96c93d)"}
+        }).showToast();
+
+    }catch{
+        Toastify({
+            text:"❌ Upload Failed",
+            duration:4000,
+            style:{background:"red"}
+        }).showToast();
+    }
+
+});
+
+
+// =======================
+// REMOVE EMAILS CSV
+// =======================
+document.getElementById("removeForm").addEventListener("submit", async function(e){
+
+    e.preventDefault();
+
+    const formData = new FormData(this);
+
+    try{
+
+        const res = await fetch("/remove-invalid-csv",{method:"POST",body:formData});
+        const data = await res.json();
+
+        Toastify({
+            text:`🧹 Removed ${data.deletedCount} emails from DB`,
+            duration:4000,
+            gravity:"top",
+            position:"right",
+            style:{background:"linear-gradient(to right,#ff416c,#ff4b2b)"}
+        }).showToast();
+
+    }catch{
+        Toastify({
+            text:"❌ Remove Failed",
+            duration:4000,
+            style:{background:"red"}
+        }).showToast();
+    }
+
+});
+
+</script>
 
 </body>
 </html>
