Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@ button{
 
 <body>
 
-<h1>🚀 META_INSYT Database Management System</h1>
+<h1>🚀 META_INSYT Database Management System(upload csv with email and name header)</h1>
 
 <div class="container">
 
@@ -194,3 +194,4 @@ document.getElementById("removeForm").addEventListener("submit", async function(
 
 </body>
 </html>
+
